1、优化鉴权方式，支持WSS鉴权。 2、星火大模型文本转语言参数编写。